[readline-6.3 released]

				   3/14
				   ----
shlib/Makefile.in
	- fix typo in dependency list for vi_mode.so: it should not depend on
	  just $(topdir). Report and fix from Natanael Copa
	  <ncopa@alpinelinux.org>

				   4/15
				   ----
{.,shlib,examples}/Makefile.in
	- make sure $(INCLUDES) appears before $(CPPFLAGS) in the various
	  CFLAGS assignments so readline looks in its own source and build
	  directories (INCLUDES) before some directories specified by the
	  user or builder (CPPFLAGS).  Report and fix from Max Horn
	  <max@quendi.de>

				    6/2
				    ---
config.h.in
	- use correct symbols: HAVE_STRUCT_DIRENT_D_INO, HAVE_STRUCT_DIRENT_D_FILENO
	  HAVE_STRUCT_DIRENT_D_NAMLEN.  They don't really matter, but they are
	  what posixdir.h looks for.  Report from Ross Burton <ross.burton@intel.com>

				   6/11
				   ----
readline.pc.in
	- new file, config file for pkgconfig. Patch to add from Jirka Klimes
	  <jklimes@redhat.com>

{MANIFEST,configure.ac,Makefile.in}
	- readline.pc: changes to create file for pkgconfig

				   10/13
				   -----
doc/Makefile.in
	- readline.pdf, history.pdf, rluserman.pdf: use texi2dvi --pdf to generate
	  these.  Suggestion from Siep Kroonenberg <siepo@cybercomm.nl>

				   11/29
				   -----
config.h.in
        - HAVE_PSELECT: define if pselect(2) available

configure.ac
        - check for pselect(2), define HAVE_PSELECT if found

				   12/29
				   -----
configure.ac
	- bump version number up to 6.4

				 1/6/2015
				 --------
configure.ac,config.h.in
	- look for ncurses/termcap.h, define HAVE_NCURSES_TERMCAP_H

				   4/20
				   ----
configure.ac
	- add template definitions set by AC_USE_SYSTEM_EXTENSIONS from a report
	  from Andreas Schwab <schwab@linux-m68k.org>

				   4/24
				   ----
configure.ac,config.h.in
	- add check for sys/ioctl.h to AC_CHECK_HEADERS, define HAVE_SYS_IOCTL_H
	  if found

				   5/29
				   ----
configure.ac
	- bump library version to 7.0 because of addition of rl_callback_sigcleanup